--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -65,17 +65,14 @@
     "\n",
     "<a id='steps0to2'></a>\n",
     "\n",
-    "## Steps 1.0-1.1: Set up the needed NRPy+ infrastructure and declare core gridfunctions used by $\\texttt{GiRaFFE}$\n",
-    "\n",
-    "$$\\label{steps0to2}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Steps 1.0-1.1: Set up the needed NRPy+ infrastructure and declare core gridfunctions used by $\\texttt{GiRaFFE}$ \\[Back to [top](#top)\\]\n",
     "\n",
     "1. Set some basic NRPy+ parameters. E.g., set the spatial dimension parameter to 3 and the finite differencing order to 4.\n",
     "1. Next, declare some gridfunctions that are provided as input to the equations:\n",
     "    1. $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$: These ADM 3+1 metric quantities are declared in the ADMBase Einstein Toolkit thorn, and are assumed to be made available to $\\texttt{GiRaFFE}$ at this stage.\n",
     "    1. The Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$: Declared by $\\texttt{GiRaFFE}$, and will have their initial values set in the separate thorn **GiRaFFEfood_HO**.\n",
-    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently **(Error check: how does this sentence end?)**"
+    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently **(Error check: how does this sentence end?)**\n",
+    "$$\\label{steps0to2}$$"
    ]
   },
   {
@@ -118,10 +115,7 @@
    "source": [
     "<a id='step3'></a>\n",
     "\n",
-    "## Step 1.2: Build the four metric $g_{\\mu\\nu}$, its inverse $g^{\\mu\\nu}$ and spatial derivatives $g_{\\mu\\nu,i}$ from ADM 3+1 quantities $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$\n",
-    "\n",
-    "$$\\label{step3}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 1.2: Build the four metric $g_{\\mu\\nu}$, its inverse $g^{\\mu\\nu}$ and spatial derivatives $g_{\\mu\\nu,i}$ from ADM 3+1 quantities $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ \\[Back to [top](#top)\\]\n",
     "\n",
     "Notice that the time evolution equation for $\\tilde{S}_i$\n",
     "$$\n",
@@ -136,7 +130,8 @@
     "\\beta_i & \\gamma_{ij}\n",
     "\\end{pmatrix}.\n",
     "$$\n",
-    "This tensor and its inverse have already been built by the u0_smallb_Poynting__Cartesian.py module ([documented here](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)), so we can simply load the module and import the variables."
+    "This tensor and its inverse have already been built by the u0_smallb_Poynting__Cartesian.py module ([documented here](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)), so we can simply load the module and import the variables.\n",
+    "$$\\label{step3}$$"
    ]
   },
   {
@@ -293,16 +288,15 @@
     "* $v_{(n)}^i$, the Valencia 3-velocity\n",
     "* $u^0$, the zero-component of the 4-velocity\n",
     "\n",
-    "## Step 2.0: $u^i$ and $b^i$ and related quantities\n",
-    "$$\\label{step4}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 2.0: $u^i$ and $b^i$ and related quantities \\[Back to [top](#top)\\]\n",
     "\n",
     "We begin by importing what we can from u0_smallb_Poynting__Cartesian.py. We will need the four-velocity $u^\\mu$, which is related to the Valencia 3-velocity $v^i_{(n)}$ used directly by $\\texttt{GiRaFFE}$ (see also [Duez, et al, eqs. 53 and 56](https://arxiv.org/pdf/astro-ph/0503420.pdf))\n",
     "\\begin{align}\n",
     "u^i &= u^0 (\\alpha v^i_{(n)} - \\beta^i), \\\\\n",
     "u_j &= \\alpha u^0 \\gamma_{ij} v^i_{(n)},\n",
     "\\end{align}\n",
-    "where $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the u0_smallb_Poynting__Cartesian.py module, so we can simply import these variables:"
+    "where $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the u0_smallb_Poynting__Cartesian.py module, so we can simply import these variables:\n",
+    "$$\\label{step4}$$"
    ]
   },
   {
@@ -356,16 +350,14 @@
    "source": [
     "<a id='step5'></a>\n",
     "\n",
-    "## Step 2.1: Construct all components of the electromagnetic stress-energy tensor $T^{\\mu \\nu}_{\\rm EM}$\n",
-    "$$\\label{step5}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 2.1: Construct all components of the electromagnetic stress-energy tensor $T^{\\mu \\nu}_{\\rm EM}$ \\[Back to [top](#top)\\]\n",
     "\n",
     "We now have all the pieces to calculate the stress-energy tensor,\n",
     "$$T^{\\mu \\nu}_{\\rm EM} = \\underbrace{b^2 u^{\\mu} u^{\\nu}}_{\\rm Term\\ 1} + \n",
     "\\underbrace{\\frac{b^2}{2} g^{\\mu \\nu}}_{\\rm Term\\ 2}\n",
     "- \\underbrace{b^{\\mu} b^{\\nu}}_{\\rm Term\\ 3}.$$\n",
-    "Because $u^0$ is a separate variable, we could build the $00$ component separately, then the $\\mu0$ and $0\\nu$ components, and finally the $\\mu\\nu$ components. Alternatively, for clarity, we could create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$"
+    "Because $u^0$ is a separate variable, we could build the $00$ component separately, then the $\\mu0$ and $0\\nu$ components, and finally the $\\mu\\nu$ components. Alternatively, for clarity, we could create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$\n",
+    "$$\\label{step5}$$"
    ]
   },
   {
@@ -405,10 +397,7 @@
    "source": [
     "<a id='step6'></a>\n",
     "\n",
-    "# Step 2.2: Derivatives of the electromagnetic stress-energy tensor\n",
-    "$$\\label{step6}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "# Step 2.2: Derivatives of the electromagnetic stress-energy tensor \\[Back to [top](#top)\\]\n",
     "\n",
     "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. When confronted with derivatives of complicated expressions, it is generally convenient to declare those expressions as gridfunctions themselves, allowing NRPy+ to take finite-difference derivatives of the expressions. This can even reduce the truncation error associated with the finite differences, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_k$. Thus $B^i$ cannot be *consistently* defined in ghost zones. To potentially reduce numerical errors induced by inconsistent finite differencing, we will differentiate $T^{\\mu\\nu}_{\\rm EM}$ term-by-term so that finite-difference derivatives of $A_i$ appear.\n",
     "\n",
@@ -468,7 +457,8 @@
     "* [Step 2.2.e](#alltogether): Putting it together: $\\partial_j T^{j}_{{\\rm EM} i}$\n",
     "    * [Step 2.2.e.i](#alltogether1): Putting it together: Term 1\n",
     "    * [Step 2.2.e.ii](#alltogether2): Putting it together: Term 2\n",
-    "    * [Step 2.2.e.iii](#alltogether3): Putting it together: Term 3"
+    "    * [Step 2.2.e.iii](#alltogether3): Putting it together: Term 3\n",
+    "$$\\label{step6}$$"
    ]
   },
   {
@@ -556,10 +546,7 @@
    "source": [
     "<a id='bideriv'></a>\n",
     "\n",
-    "## Step 2.2.b: Derivatives of $b^i$\n",
-    "$$\\label{bideriv}$$\n",
-    "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
+    "## Step 2.2.b: Derivatives of $b^i$ \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
     "Starting from the definition \n",
     "$$\n",
@@ -578,7 +565,8 @@
     "It will be easier to code this up if we rearrange these terms to group together the terms that involve contractions over $j$. Doing that, we find\n",
     "$$\n",
     "b^i_{,k} = \\frac{\\overbrace{\\alpha u^0 B^i_{,k} - B^i \\partial_k (\\alpha u^0)}^{\\rm Term\\ Num1} + \\overbrace{\\left( \\alpha u^0 \\right) \\left( u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k} \\right)}^{\\rm Term\\ Num2.a} - \\overbrace{\\left( u_j B^j u^i \\right) \\partial_k \\left( \\alpha u^0 \\right) }^{\\rm Term\\ Num2.b}}{\\underbrace{\\sqrt{4 \\pi} \\left( \\alpha u^0 \\right)^2}_{\\rm Term\\ Denom}}.\n",
-    "$$"
+    "$$\n",
+    "$$\\label{step6}$$"
    ]
   },
   {
@@ -630,10 +618,7 @@
    "source": [
     "<a id='b2deriv'></a>\n",
     "\n",
-    "## Step 2.2.c: Derivative of $b^2$\n",
-    "$$\\label{b2deriv}$$\n",
-    "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
+    "## Step 2.2.c: Derivative of $b^2$ \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
     "Here, we will take the derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$. Using the product rule,\n",
     "\\begin{align}\n",
@@ -650,7 +635,8 @@
     "\\rightarrow b^0_{,j} &= \\frac{1}{\\sqrt{4\\pi}} \\frac{\\alpha \\left( u_{k,j} B^k + u_k B^k_{,j} \\right) - u_k B^k \\alpha_{,j}}{\\alpha^2} \\\\\n",
     "    &= \\frac{\\alpha u_{k,j} B^k + \\alpha u_k B^k_{,j} - \\alpha_{,j} u_k B^k}{\\sqrt{4\\pi} \\alpha^2}.\n",
     "\\end{align}\n",
-    "We will first code the numerator, and then divide through by the denominator."
+    "We will first code the numerator, and then divide through by the denominator.\n",
+    "$$\\label{b2deriv}$$"
    ]
   },
   {
@@ -726,12 +712,10 @@
    "source": [
     "<a id='gupijderiv'></a>\n",
     "\n",
-    "## Step 2.2.d: Derivatives of $g^{\\mu\\nu}$\n",
-    "$$\\label{gupijderiv}$$\n",
+    "## Step 2.2.d: Derivatives of $g^{\\mu\\nu}$ \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
-    "\n",
-    "We will need derivatives of the inverse four-metric, as well. Let us begin with $g^{00}$: since $g^{00} = -1/\\alpha^2$ ([Gourgoulhon, eq. 4.49](https://arxiv.org/pdf/gr-qc/0703035.pdf)), $$g^{00}_{\\ ,k} = \\frac{2 \\alpha_{,k}}{\\alpha^3}$$\n"
+    "We will need derivatives of the inverse four-metric, as well. Let us begin with $g^{00}$: since $g^{00} = -1/\\alpha^2$ ([Gourgoulhon, eq. 4.49](https://arxiv.org/pdf/gr-qc/0703035.pdf)), $$g^{00}_{\\ ,k} = \\frac{2 \\alpha_{,k}}{\\alpha^3}$$\n",
+    "$$\\label{gupijderiv}$$"
    ]
   },
   {
@@ -833,10 +817,7 @@
    "source": [
     "<a id='alltogether'></a>\n",
     "\n",
-    "## Step 2.2.e: Putting it together: Constructing $\\partial_j  T^{j}_{{\\rm EM} i}$\n",
-    "$$\\label{alltogether}$$\n",
-    "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
+    "## Step 2.2.e: Putting it together: Constructing $\\partial_j  T^{j}_{{\\rm EM} i}$ \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
     "So, we can now put it all together, starting from the expression we derived above in [Step 2.2](#step6):\n",
     "\\begin{align}\n",
@@ -854,7 +835,8 @@
     "\\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
     "We will now construct this term by term. Term 1 is straightforward: $${\\rm Term\\ 1} = g_{\\mu i,j} T^{\\mu j}_{\\rm EM}.$$\n",
-    "**Error check: fixed typo $\\gamma$ -> $g$**"
+    "**Error check: fixed typo $\\gamma$ -> $g$**\n",
+    "$$\\label{alltogether}$$"
    ]
   },
   {
@@ -879,14 +861,12 @@
    "source": [
     "<a id='alltogether2'></a>\n",
     "\n",
-    "### Step 2.2.e.ii: Putting it together: Term 2\n",
-    "$$\\label{alltogether2}$$\n",
-    "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
+    "### Step 2.2.e.ii: Putting it together: Term 2 \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
     "We will now add $${\\rm Term\\ 2} = g_{\\mu i} \\left( \\underbrace{b^2 u^j_{,j} u^\\mu}_{\\rm Term\\ 2a} + \\underbrace{b^2 u^j u^\\mu_{,j}}_{\\rm Term\\ 2b} + \\underbrace{\\frac{b^2}{2} g^{j\\mu}_{\\ ,j}}_{\\rm Term\\ 2c} + \\underbrace{b^j_{,j} b^\\mu}_{\\rm Term\\ 2d} + \\underbrace{b^j b^\\mu_{,j}}_{\\rm Term\\ 2e} \\right)$$ to $\\partial_j  T^{j}_{{\\rm EM} i}$. These are the terms that involve contractions over $k$ (but no metric derivatives like Term 1 had). \n",
     "\n",
-    "All terms have been computed in terms of gridfunctions and their derivatives, except we will find it convenient to define the derivative of the 4-velocity $\\text{u4UdD[]}$ in terms of finite difference derivatives of $u^0=\\text{u4upperZero}$ and $u^i=\\text{uU[]}$:"
+    "All terms have been computed in terms of gridfunctions and their derivatives, except we will find it convenient to define the derivative of the 4-velocity $\\text{u4UdD[]}$ in terms of finite difference derivatives of $u^0=\\text{u4upperZero}$ and $u^i=\\text{uU[]}$:\n",
+    "$$\\label{alltogether2}$$"
    ]
   },
   {
@@ -944,12 +924,10 @@
    "source": [
     "<a id='alltogether3'></a>\n",
     "\n",
-    "### Step 2.2.e.iii: Putting it together: Term 3\n",
-    "$$\\label{alltogether3}$$\n",
+    "### Step 2.2.e.iii: Putting it together: Term 3 \\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "\\[Back to [List of Derivatives](#table2)\\]\n",
-    "\n",
-    "Now, we will add $${\\rm Term\\ 3} = g_{\\mu i} \\left( \\underbrace{\\left(b^2\\right)_{,j} u^j u^\\mu}_{\\rm Term\\ 3a} + \\underbrace{\\frac{1}{2} \\left(b^2\\right)_{,j} g^{j\\mu}}_{\\rm Term\\ 3b} \\right).$$ "
+    "Now, we will add $${\\rm Term\\ 3} = g_{\\mu i} \\left( \\underbrace{\\left(b^2\\right)_{,j} u^j u^\\mu}_{\\rm Term\\ 3a} + \\underbrace{\\frac{1}{2} \\left(b^2\\right)_{,j} g^{j\\mu}}_{\\rm Term\\ 3b} \\right).$$ \n",
+    "$$\\label{alltogether3}$$"
    ]
   },
   {
@@ -980,10 +958,7 @@
     "# Evolution equation for $\\tilde{S}_i$\n",
     "<a id='step7'></a>\n",
     "\n",
-    "## Step 3.0: Construct the evolution equation for $\\tilde{S}_i$\n",
-    "$$\\label{step7}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 3.0: Construct the evolution equation for $\\tilde{S}_i$ \\[Back to [top](#top)\\]\n",
     "\n",
     "Finally, we will return our attention to the time evolution equation (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)),\n",
     "\\begin{align}\n",
@@ -992,7 +967,8 @@
     "                       &= \\underbrace{-g_{i\\mu} T^{\\mu j}_{\\rm EM} \\partial_j (\\alpha \\sqrt{\\gamma})\n",
     "}_{\\rm Term\\ 1} - \\underbrace{\\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}}_{\\rm Term\\ 2} + \\underbrace{\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}}_{\\rm Term\\ 3} .\n",
     "\\end{align}\n",
-    "We will first take derivatives of $\\alpha \\sqrt{\\gamma}$, then construct each term in turn."
+    "We will first take derivatives of $\\alpha \\sqrt{\\gamma}$, then construct each term in turn.\n",
+    "$$\\label{step7}$$"
    ]
   },
   {
@@ -1033,10 +1009,7 @@
     "# Evolution equations for $A_i$ and $\\Phi$\n",
     "<a id='step8'></a>\n",
     "\n",
-    "## Step 4.0: Construct the evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$\n",
-    "$$\\label{step8}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 4.0: Construct the evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$ \\[Back to [top](#top)\\]\n",
     "\n",
     "We will also need to evolve the vector potential $A_i$. This evolution is given as eq. 17 in the [$\\texttt{GiRaFFE}$](https://arxiv.org/pdf/1704.00599.pdf) paper:\n",
     "$$\\boxed{\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\underbrace{\\alpha \\Phi - \\beta^j A_j}_{\\rm AevolParen}),}$$\n",
@@ -1047,7 +1020,8 @@
     "\n",
     "### Step 4.0.a: Construct some useful auxiliary gridfunctions for the other evolution equations\n",
     "\n",
-    "After declaring a  some needed quantities, we will also define the parenthetical terms (underbrace above) that we need to take derivatives of. That way, we can take finite-difference derivatives easily. Note that the above equations incorporate the fact that $\\gamma^{ij}$ is the appropriate raising operator for $A_i$: $A^j = \\gamma^{ij} A_i$. This is correct since $n_\\mu A^\\mu = 0$, where $n_\\mu$ is a normal to the hypersurface, so $A^0=0$ (according to Sec. II, subsection C of [the \"Improved EM gauge condition\" paper of Etienne *et al*](https://arxiv.org/pdf/1110.4633.pdf))."
+    "After declaring a  some needed quantities, we will also define the parenthetical terms (underbrace above) that we need to take derivatives of. That way, we can take finite-difference derivatives easily. Note that the above equations incorporate the fact that $\\gamma^{ij}$ is the appropriate raising operator for $A_i$: $A^j = \\gamma^{ij} A_i$. This is correct since $n_\\mu A^\\mu = 0$, where $n_\\mu$ is a normal to the hypersurface, so $A^0=0$ (according to Sec. II, subsection C of [the \"Improved EM gauge condition\" paper of Etienne *et al*](https://arxiv.org/pdf/1110.4633.pdf)).\n",
+    "$$\\label{step8}$$"
    ]
   },
   {
@@ -1126,14 +1100,12 @@
     "\n",
     "<a id='step9'></a>\n",
     "\n",
-    "# Step 5.0: NRPy+ Module Code Validation\n",
-    "$$\\label{step9}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
+    "# Step 5.0: NRPy+ Module Code Validation \\[Back to [top](#top)\\]\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ evolution equations and auxiliary quantities we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFE_Higher_Order.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order.py) module.\n"
+    "2. the NRPy+ [GiRaFFE_Higher_Order.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order.py) module.\n",
+    "$$\\label{step9}$$"
    ]
   },
   {
@@ -1221,7 +1193,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 115421 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 116502 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
