--- a/Tutorial-BSSN_unrescaled_and_barred_vars.ipynb
+++ b/Tutorial-BSSN_unrescaled_and_barred_vars.ipynb
@@ -29,18 +29,20 @@
     "This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions needed in terms of unrescaled BSSN quantities (i.e., $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$), including:\n",
     "\n",
     "1. [Steps 1 & 2](#initializenrpy): Initialize core NRPy+ modules\n",
-    "1. [Step 3](#bssn_barred_metric_derivs_and_extrinsic_curvature): BSSN_barred_metric_derivs_and_extrinsic_curvature()\n",
+    "1. [Step 3](#bssn_barred_metric_derivs_and_extrinsic_curvature) BSSN_barred_metric_derivs_and_extrinsic_curvature(): Barred (covariant) metric $\\bar{\\gamma}_{ij}$ and $\\bar{\\gamma}^{ij}$; barred metric derivatives; and barred extrinsic curvature $\\bar{A}_{ij}$, and $\\bar{A}^{ij}$\n",
     "    1. [Step 3.a](#gammabar): Barred 3-metric $\\bar{\\gamma}_{ij}$, $\\bar{\\gamma}^{ij}$\n",
     "    1. [Step 3.b](#gammabar_derivs): Spatial derivatives of $\\bar{\\gamma}_{ij}$, including $\\bar{\\Gamma}^{i}_{jk}$\n",
     "    1. [Step 3.c](#abar): Traceless, conformal extrinsic curvature $\\bar{A}_{ij}$, and $\\bar{A}^{ij}$\n",
-    "1. Barred Ricci tensor $\\bar{R}_{ij}$, hatted covariant derivative of barred 3-metric $\\hat{D}_k \\bar{\\gamma}_{ij}$, $\\Delta^i_{jk} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and $\\Delta^i = \\bar{\\gamma}^{jk} \\Delta^i_{jk}$:\n",
-    "    1. [RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU()](#RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU)\n",
-    "1. Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$.\n",
-    "    1. [betaUbar_and_derivs()](#betaUbar_and_derivs)\n",
-    "1. Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
-    "    1. [phi_and_derivs()](#phi_and_derivs)\n",
-    "1. Code Validation\n",
-    "    1. [Validate results from this tutorial module against BSSN.BSSN_unrescaled_and_barred_vars NRPy+ module](#validation)"
+    "1. [Step 4](#rbar): RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU(): The conformal (\"barred\") Ricci tensor $\\bar{R}_{ij}$ and associated quantities\n",
+    "    1. [Step 4.a](#hatted_2nd_covar_deriv_of_barred_3metric): Hatted covariant second derivative of barred 3-metric $\\hat{D}_k \\hat{D}_l \\bar{\\gamma}_{ij}$\n",
+    "    1. [Step 4.b](#christoffel_difference_deltaijk): Covariant difference in Christoffel symbols, $\\Delta^i_{jk} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and its contraction $\\Delta^i = \\bar{\\gamma}^{jk} \\Delta^i_{jk}$\n",
+    "    1. [Step 4.c](#computing_rbar): Computing $\\bar{R}_{ij}$\n",
+    "1. [Step 5](#unrescaled_shift_and_derivs): betaUbar_and_derivs(): Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$\n",
+    "    1. b\n",
+    "1. [Step 6](#phi_and_derivs): phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
+    "    1. p\n",
+    "1. [Step 7](#code_validation): Code Validation against BSSN.BSSN_unrescaled_and_barred_vars NRPy+ module\n",
+    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -292,8 +294,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Computing $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$\n",
+    "<a id='rbar'></a>\n",
+    "\n",
+    "## Step 4: RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU(): The conformal (\"barred\") Ricci tensor $\\bar{R}_{ij}$ and associated quantities\n",
+    "$$\\label{rbar}$$\n",
+    "\n",
+    "\n",
+    "Let's compute perhaps the most complicated expression in the BSSN evolution equations, the conformal Ricci tensor:\n",
+    "\n",
+    "\\begin{align}\n",
+    "  \\bar{R}_{i j} {} = {} & - \\frac{1}{2} \\bar{\\gamma}^{k l} \\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} + \\bar{\\gamma}_{k(i} \\hat{D}_{j)} \\bar{\\Lambda}^{k} + \\Delta^{k} \\Delta_{(i j) k} \\nonumber \\\\\n",
+    "  & + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right ) \\; .\n",
+    "\\end{align}\n",
+    "\n",
+    "Let's tackle the $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$ term first:\n",
+    "\n",
+    "<a id='hatted_2nd_covar_deriv_of_barred_3metric'></a>\n",
+    "\n",
+    "### Step 4.a: Hatted covariant second derivative of barred 3-metric $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$\n",
+    "$$\\label{hatted_2nd_covar_deriv_of_barred_3metric}$$\n",
     "\n",
     "First note that the covariant derivative of a metric with respect to itself is zero\n",
     "$$\\hat{D}_{l} \\hat{\\gamma}_{ij} = 0,$$\n",
@@ -383,6 +408,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='christoffel_difference_deltaijk'></a>\n",
+    "\n",
+    "### Step 4.b: Covariant difference in Christoffel symbols, $\\Delta^i_{jk} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and its contraction $\\Delta^i = \\bar{\\gamma}^{jk} \\Delta^i_{jk}$\n",
+    "\n",
+    "$$\\label{christoffel_difference_deltaijk}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='computing_rbar'></a>\n",
+    "\n",
+    "### Step 4.c: Computing $\\bar{R}_{ij}$\n",
+    "$$\\label{computing_rbar}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='unrescaled_shift_and_derivs'></a>\n",
+    "\n",
+    "## Step 5: betaUbar_and_derivs(): Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$\n",
+    "$$\\label{unrescaled_shift_and_derivs}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='phi_and_derivs'></a>\n",
+    "\n",
+    "## Step 6: phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
+    "$$\\label{phi_and_derivs}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "## Step 7: Code validation \n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "As a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ BSSN module.\n",
+    "\n",
+    "By default, we analyze the RHSs in Spherical coordinates, though other coordinate systems may be chosen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "## Step 8: Output this module to $\\LaTeX$-formatted PDF file\n",
+    "$$\\label{latex_pdf_output}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -392,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_unrescaled_and_barred_vars.ipynb to latex\n",
-      "[NbConvertApp] Writing 48347 bytes to Tutorial-BSSN_unrescaled_and_barred_vars.tex\n",
+      "[NbConvertApp] Writing 53753 bytes to Tutorial-BSSN_unrescaled_and_barred_vars.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
