--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -356,7 +356,9 @@
     "mre4U  = ixp.zerorank1(DIM=4)\n",
     "mim4U  = ixp.zerorank1(DIM=4)\n",
     "\n",
-    "isqrt2 = 1/sp.sqrt(2)\n",
+    "# M_SQRT1_2 = 1 / sqrt(2) (defined in math.h on Linux)\n",
+    "M_SQRT1_2 = par.Cparameters(\"REAL\",thismodule,\"M_SQRT1_2\")\n",
+    "isqrt2 = M_SQRT1_2 #1/sp.sqrt(2) <- SymPy drops precision to 15 sig. digits in unit tests\n",
     "for mu in range(4):\n",
     "    l4U[mu]   = isqrt2*(u4U[mu] + r4U[mu])\n",
     "    n4U[mu]   = isqrt2*(u4U[mu] - r4U[mu])\n",
@@ -465,7 +467,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
-      "[NbConvertApp] Writing 55961 bytes to Tutorial-Psi4_tetrads.tex\n",
+      "[NbConvertApp] Writing 151420 bytes to Tutorial-Psi4_tetrads.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
