--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -24,7 +24,7 @@
     "##### NRPy+ Basics\n",
     "+ [NRPy+: Introduction & Motivation](https://math.wvu.edu/~zetienne/SENR/nrpy) (NRPy+ home page)\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
-    "+ [`cmdline_helper`: Compiling and executing C Code from NRPy+](Tutorial-cmdline_helper.ipynb)\n",
+    "+ [`cmdline_helper`: Compiling and executing C Code from NRPy+](Tutorial-cmdline_helper.ipynb) (*Courtesy Brandon Clark*)\n",
     "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
@@ -32,10 +32,10 @@
     "    + **Start-to-Finish Example**: [Finite-Difference Playground: A Complete C Code for Validating NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
     "+ Method of Lines for PDEs: Step PDEs forward in time using ODE methods\n",
     "    + Solving ODEs using explicit Runge Kutta methods (*Courtesy Brandon Clark*)\n",
-    "        + [The Family of Explicit Runge-Kutta methods and their Butcher tables](Tutorial-RK_Butcher_Table_Dictionary.ipynb)\n",
-    "        + [Validating Runge Kutta Butcher tables using Truncated Taylor Series](Tutorial-RK_Butcher_Table_Validation.ipynb)\n",
-    "    + [Generating C Code to implement Method of Lines timestepping with Explicit Runge Kutta-like methods](Tutorial-Method_of_Lines-C_Code_Generation.ipynb) (*Courtesy Brandon Clark*)\n",
-    "+ [Writing your own NRPy+ module: A Style Guide](Tutorial-Template_Style_Guide.ipynb) (*Courtesy Brandon Clark*)\n",
+    "        + [The Family of explicit Runge-Kutta methods and their Butcher tables](Tutorial-RK_Butcher_Table_Dictionary.ipynb)\n",
+    "        + [Validating Runge Kutta Butcher tables using truncated Taylor series](Tutorial-RK_Butcher_Table_Validation.ipynb)\n",
+    "    + [Generating C Code to implement Method of Lines timestepping with explicit Runge Kutta-like methods](Tutorial-Method_of_Lines-C_Code_Generation.ipynb) (*Courtesy Brandon Clark*)\n",
+    "+ [Writing your own NRPy+ tutorial module: A Style Guide](Tutorial-Template_Style_Guide.ipynb) (*Courtesy Brandon Clark*)\n",
     "\n",
     "### PART 2: Basic Physics Applications \n",
     "##### Using NRPy+ to Numerically Solve PDEs\n",
