--- a/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
@@ -188,8 +188,8 @@
     "\n",
     "#include \"declare_Cparameters_struct.h\"\n",
     "\n",
-    "// If compiled with AVX2 support:\n",
-    "#ifdef __AVX2__\n",
+    "// If compiled with AVX support:\n",
+    "#ifdef __AVX__\n",
     "#include <immintrin.h>\n",
     "#define REAL_SIMD_ARRAY __m256d\n",
     "#define SIMD_width 4 // 4 doubles per loop iteration\n",
@@ -200,12 +200,15 @@
     "#define SubSIMD(a,b) _mm256_sub_pd((a),(b))\n",
     "#define MulSIMD(a,b) _mm256_mul_pd((a),(b))\n",
     "#define DivSIMD(a,b) _mm256_div_pd((a),(b))\n",
+    "#define ExpSIMD(a) _mm256_exp_pd((a))\n",
+    "#define SinSIMD(a) _mm256_sin_pd((a))\n",
+    "#define CosSIMD(a) _mm256_cos_pd((a))\n",
     "#ifdef __FMA__\n",
     "#define FusedMulAddSIMD(a,b,c) _mm256_fmadd_pd((a),(b),(c))\n",
     "#define FusedMulSubSIMD(a,b,c) _mm256_fmsub_pd((a),(b),(c))\n",
     "#else\n",
     "#define FusedMulAddSIMD(a,b,c) _mm256_add_pd(_mm256_mul_pd((a),(b)), (c)) // a*b+c\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm256_sub_pd(_mm256_mul_pd((a),(b)), (c)) // a*b-c\n",
+    "#define FusedMulSubSIMD(a,b,c) _mm256_sub_pd(_mm256_mul_pd((a),(b)), (c)) // a*b-c\n",
     "#endif\n",
     "#else\n",
     "// If SIMD intrinsics unavailable:\n",
